--- a/frontend/mess-pos/src/FontSizing.css
+++ b/frontend/mess-pos/src/FontSizing.css
@@ -1,5 +1,5 @@
-.dm-button {
-    background-color: grey;
+.font-size {
+    background-color: red;
     border: none;
     color: white;
     padding: 15px 32px;
